# SpiderCamera

./: README.md
bbox_to_cmd_vel/: CMakeLists.txt
bbox_to_cmd_vel/scripts/: commands.py  compute_cmd_vel.py  design.json  design.py  draw_splines.py  equirect_to_stereographic.py  equirect_to_stereographic2.py  keyboard_teleop.py  keyboard_teleop.py.save  run.json
garmin_virb/: virb.py
models/3D_Printing/: horn_0001.stl  plate_0001.stl
models/Cinema4D/: horn.c4d  horn_0001.c4d  horn_0002.c4d  horn_0002.mtl  plate.c4d  plate_0001.c4d
models/Sketches/: design.ai
raspi/: source_script.sh  startup_script.sh
raspi/bbox_to_cmd_vel/: package.xml
raspi/cmd_vel_controller/: CMakeLists.txt  package.xml
raspi/cmd_vel_controller/include/avr/: Makefile.am  Makefile.in  interrupt.h  io1200.h  io2313.h  io2323.h  io2333.h  io2343.h  io4414.h  io4433.h  io4434.h  io8515.h  io8535.h  io90pwm1.h  io90pwm216.h  io90pwm2b.h  io90pwm316.h  io90pwm3b.h  io90pwmx.h  iocanxx.h  iom103.h  iom1284p.h  iom16.h  iom161.h  iom162.h  iom163.h  iom165.h  iom165p.h  iom168p.h  iom169.h  iom169p.h  iom16a.h  iom16u2.h  iom32.h  iom323.h  iom325.h  iom3250.h  iom32m1.h  iom32u2.h  iom32u4.h  (+28 more)
raspi/cmd_vel_controller/msg/: cmd_vel_motors.msg
raspi/cmd_vel_controller/scripts/: safety_check.py
raspi/cmd_vel_controller/src/: ax12_controller.cpp
ros_packages/: tracker.launch
ros_packages/siam_tracker/: CMakeLists.txt  package.xml
siam_tracker/: README.md  run_tracker_evaluation.py
siam_tracker/parameters/: design.json
siam_tracker/pretrained/: cfnet-conv2_e80.mat  (+1 more)
(+65 files in other folders)
